<resources>
    <string name="app_name">EyeTouch</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="face_not_found">No Face To Detect</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main">activity_main</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="EyeOpen">Eyes Detected and open, so video continues</string>
    <string name="EyeClose">Eyes Detected and closed, so video paused</string>
    <string name="sensitivity">Sensitivity: 0.7</string>
    <string name="camera_on">Camera On</string>
    <string name="camera_off">Camera Off</string>
    <string name="left_eye">Left Eye</string>
    <string name="right_eye">Right Eye</string>
    <string name="both_eyes">Both Eyes</string>
    <string name="blink">Blink</string>
    <string name="no_face">No Face</string>
    <string name="accessibility_service_label">eyeservice</string>
</resources>
