<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        app:layout_constraintTop_toBottomOf="@+id/camera"
        tools:layout_editor_absoluteX="16dp">

        <Spinner
            android:id="@+id/nofacefun"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/blinkfun"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/blinkfun" />

        <Spinner
            android:id="@+id/blinkfun"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/botheyefun"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/botheyefun" />

        <Spinner
            android:id="@+id/botheyefun"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/righteyefun"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/righteyefun" />

        <Spinner
            android:id="@+id/lefteyefun"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="40dp"
            app:layout_constraintEnd_toEndOf="parent" />

        <Spinner
            android:id="@+id/righteyefun"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lefteyefun"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lefteyefun" />

        <TextView
            android:id="@+id/noface"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_alignTop="@+id/nofacefun"
            android:layout_alignBottom="@+id/nofacefun"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="25dp"
            android:layout_toStartOf="@+id/righteyefun"
            android:text="@string/no_face"
            app:layout_constraintEnd_toStartOf="@+id/nofacefun"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/blink" />

        <TextView
            android:id="@+id/blink"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_alignTop="@+id/blinkfun"
            android:layout_alignBottom="@+id/blinkfun"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="25dp"
            android:layout_toStartOf="@+id/blinkfun"
            android:text="@string/blink"
            app:layout_constraintEnd_toStartOf="@+id/blinkfun"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/botheyes" />

        <TextView
            android:id="@+id/botheyes"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_alignTop="@+id/botheyefun"
            android:layout_alignBottom="@+id/botheyefun"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="25dp"
            android:layout_toStartOf="@+id/botheyefun"
            android:text="@string/both_eyes"
            app:layout_constraintEnd_toStartOf="@+id/botheyefun"
            app:layout_constraintHorizontal_bias="0.555"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/righteye" />

        <TextView
            android:id="@+id/lefteye"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_alignTop="@+id/lefteyefun"
            android:layout_alignBottom="@+id/lefteyefun"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="25dp"
            android:layout_toStartOf="@+id/lefteyefun"
            android:text="@string/left_eye"
            app:layout_constraintEnd_toStartOf="@+id/lefteyefun"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/righteye"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_alignTop="@+id/righteyefun"
            android:layout_alignBottom="@+id/righteyefun"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="25dp"
            android:layout_toStartOf="@+id/righteyefun"
            android:text="@string/right_eye"
            app:layout_constraintEnd_toStartOf="@+id/righteyefun"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lefteye" />
    </RelativeLayout>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        tools:layout_editor_absoluteX="18dp" />

    <TextView
        android:id="@+id/eye"
        android:layout_width="351dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/face_not_found"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <SeekBar
        android:id="@+id/sensitivity"
        android:layout_width="224dp"
        android:layout_height="36dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/eye" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/sensitivity"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eye" />

    <Button
        android:id="@+id/camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="16dp"
        android:text="@string/camera_off"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sensitivity" />

</androidx.constraintlayout.widget.ConstraintLayout>